<resources>
    <string name="app_name">Dawn to Dusk</string>
    <string name="tv_label_login">Login</string>
    <string name="mobile_number">Mobile No</string>
    <string name="country_code">Country Code</string>
    <string name="email">Email</string>
    <string name="userId">userId</string>
    <string name="new_here_register_login">New Here? Register Login </string>
    <string name="tv_label_registration">Registration</string>
    <string name="tv_label_verify_otp">OTP Verify</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="title_activity_dash_board">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="cart">Cart</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="button_name_order">Order</string>
    <string name="button_name_meals">Meal Plan</string>
    <string name="please_type_the_verification_code_sent_to_n_9xxxxxxx19">Please type the verification code sent to</string>
    <string name="resend">Resend</string>
    <string name="verification_code">Verification Code</string>
    <string name="show_error">SHOW ERROR</string>
    <string name="show_success">SHOW Success</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="yourOrders">Your Orders</string>
    <string name="add">Add</string>
    <string name="view_cart">View Cart</string>
    <string name="add_cart">Add Cart</string>
    <string name="help_and_support">Help &amp; Support</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="addresses">Address</string>
    <string name="order_history">Order History</string>
    <string name="app_settings">App Settings</string>
    <string name="faq">FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="Terms_and_condition">Terms &amp; Conditions</string>
    <string name="contact">Contact</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="google_pay">Google Pay</string>
    <string name="Net_banking">NetBanking</string>
    <string name="card_payment">Card Payment</string>
    <string name="cod">COD</string>
    <string name="card_holder">CARD HOLDER</string>
    <string name="card_save">CARD SAVE</string>
    <string name="bank">BANK</string>
    <string name="cards">CARDS</string>
    <string name="full_name"> Full Name</string>
    <string name="required">Required*</string>
    <string name="card_number">Card Number</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_reason">Cancel Reason</string>
    <string name="cvv">CVV</string>
    <string name="month_year">Month/Year</string>
    <string name="add_card">Add Card</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_no">Account No</string>
    <string name="confirm_no">Confirm No</string>
    <string name="ifcs_code">IFCS Code</string>
    <string name="bank_code">Bank Code</string>
    <string name="add_bank">Add Bank</string>
    <string name="google_location">Google Location</string>
    <string name="flat_villo_house_no">Flat/Villa/House No</string>
    <string name="landmark1">Landmark1</string>
    <string name="landmark2">Landmark2</string>
    <string name="office">Office</string>
    <string name="home">Home</string>
    <string name="other">Other</string>
    <string name="start_ordering">Start Ordering</string>
    <string name="nutritional_info">Nutritional Info</string>
    <string name="allergy_info">Allergy Info</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="how_its_work">How it\'s Work</string>
    <string name="up_coming_meals">Upcoming Meals</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="community">Community</string>
    <string name="vill_no">Villa No</string>
    <string name="landmark">Landmark</string>
    <string name="payment_gateway">Payment gateway</string>
    <string name="invoice">Invoice</string>
    <string name="items">Items</string>
    <string name="deliveryCharge">Delivery Charges</string>
    <string name="vat">VAT(5%)</string>
    <string name="total_price">Total Price</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="mail_invoice">Mail Invoice</string>
    <string name="rate_of_order">Rate the Order</string>
    <string name="rate_us_here">Rate us here</string>
    <string name="submit">submit</string>
    <string name="completed">Completed</string>
    <string name="running">Running</string>
    <string name="a_la_cart">A la Carte</string>
    <string name="meal_plans">Meal Plans</string>
    <string name="breakfast">Breakfast</string>
    <string name="brunch">Brunch</string>
    <string name="subscription">Subscription</string>
    <string name="start_from">Starts from</string>
    <string name="veg">Veg</string>
    <string name="select_delivery_date"> Select Delivery Date</string>
    <string name="start_date"> Start Date</string>
    <string name="select_the_community"> Select the Community</string>
    <string name="coupon">Coupon</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply">Apply</string>
    <string name="terms_and_conditions">I agree to all Terms and Conditions</string>
    <string name="termsAndConditions">Terms &amp; Conditions</string>
    <string name="how_its_works">How its Work</string>
    <string name="choose_subscription_plan">Choose Subscription Plan</string>
    <string name="select_plan_start_date">Select Plan Start Date</string>
    <string name="please_enter_villa_no">Please Enter Villa No</string>
    <string name="please_enter_land_mark">Please Enter LandMark</string>
    <string name="check_out">Check Out</string>
    <string name="coupons">Coupons</string>
    <string name="track_order">Track Order</string>
    <string name="place_order">Placed Order</string>
    <string name="food_is_under_preparation">Coupons</string>
    <string name="out_for_delivery">Track Order</string>
    <string name="delivered_to_client">Delivered to Client</string>
    <string name="menu">MENU</string>
    <string name="order_details_sharedPreferences">Order short description Details </string>
    <string name="registration_details_sharedPreferences">Registration Details </string>
    <string name="subscription_plan_details_sharedPreferences">Registration Details </string>
    <string name="cart_details_sharedPreferences">Order short description Details </string>
    <string name="order_tracking">Order Tracking</string>
    <string name="subCategory_sharedPreference_data">sub Category SharedPreference Data</string>
    <string name="yourOrderDetails">Your Order Details</string>
    <string name="reviewOrders">Review Your Orders</string>
    <string name="pay_aed">Pay AED </string>
    <string name="how_its_works_contents">•	Breakfast combos are delivered every day at around 6AM to the chosen address
•	A predefined specially curated food item will be delivered daily
•	Full flexibility to change subscription plan and delivery address anytime
•	You can auto-renew subscriptions and get the best price per meal. Subscriptions renew on the same day of every week/month from the start date
</string>
    <string name="terms_and_condition_contents">•Food will be kept at a assigned location near the entrance  everyday around 6AM
•	No food delivery on Fridays and Saturdays
•	Subscription cannot be cancelled once bought
</string>
    <string name="allergy_info_contents">GF - Gluten free / D - Contains diary / N - Contains Nuts / SS -sea same seed / SO- soya / V - vegetarian / S spicy.</string>
    <string name="item">Item</string>
    <string name="aed">AED</string>
    <string name="totalPrice"> Total Price</string>
    <string name="days_plan">days plan</string>
</resources>