<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.HelpSupportFragment">

    <Button
        android:id="@+id/button_faq"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/faq"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_isticky_note_green"
        android:drawableRight="@drawable/ic_arrow_right"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_privecy_policy"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/privacy_policy"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_green_lock_"
        android:drawableRight="@drawable/ic_arrow_right"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_faq" />

    <Button
        android:id="@+id/button_terms_condition"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/Terms_and_condition"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_green_notes"
        android:drawableRight="@drawable/ic_arrow_right"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_privecy_policy" />

    <Button
        android:id="@+id/button_contact"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:text="@string/contact"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_green_headset_mic"
        android:drawableRight="@drawable/ic_arrow_right"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_terms_condition" />

</androidx.constraintlayout.widget.ConstraintLayout>